--- a/ansible/appflowy/template/nginx.conf.j2
+++ b/ansible/appflowy/template/nginx.conf.j2
@@ -77,6 +77,14 @@ server {
             proxy_pass http://127.0.0.1:8000;
             proxy_request_buffering off;
             client_max_body_size 256M;
+
         }
+    }
+
+    location / {
+        proxy_set_header X-Scheme $scheme;
+        proxy_set_header Host $host;
+
+        proxy_pass http://127.0.0.1:3000;
     }
 }
